--- a/Advisor_K4/index.html
+++ b/Advisor_K4/index.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <div data-role="view" id="tabstrip-home" data-title="Thomson One Advisor">
-            <h1>Welcome! 4-1</h1>
+            <h1>Welcome!</h1>
             <p>
                 
             </p>
@@ -368,7 +368,7 @@
                 <div data-role="tabstrip">
                     <a href="#tabstrip-home" data-icon="home">Home</a>
                     <a href="views/recentContactsView.html" data-icon="globe">Households</a>
-                    <a href="views/recentModelsView.html" data-icon="featured">Models</a>
+                    <a href="views/recentProposalsView.html" data-icon="featured">Proposals</a>
                     <a href="views/fileView.html" data-icon="organize">My Files</a>
                     <a href="views/chartsView.html">Charts</a>
                 </div>
