5/28 adding add/hide loading

--- a/Advisor_K4/index.html
+++ b/Advisor_K4/index.html
@@ -240,6 +240,10 @@
                                  </li>
                                </ul>
                        </li>
+                       <li>
+                             <a href="#views/morechartsView.html">More Charts</a>
+                               
+                       </li>
                     </ul>               
                 </div>
             </div>
@@ -372,7 +376,7 @@
                     <a href="views/recentContactsView.html" data-icon="globe">Households</a>
                     <a href="views/recentProposalsView.html" data-icon="featured">Proposals</a>
                     <a href="views/fileView.html" data-icon="organize">Files</a>
-                    <a href="views/chartsView.html">Charts</a>
+                    <!--<a href="views/chartsView.html">Charts</a>-->
                 </div>
             </div>
             
