5/29 set image for each investor

--- a/Advisor_K4/index.html
+++ b/Advisor_K4/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div data-role="view" id="tabstrip-home" data-title="Thomson One Advisor">
-            <h1>Welcome!</h1>
+            <h1>Welcome</h1>
             <p>
                 
             </p>
@@ -375,7 +375,7 @@
                     <a href="#tabstrip-home" data-icon="home">Home</a>
                     <a href="views/recentContactsView.html" data-icon="globe">Households</a>
                     <a href="views/recentProposalsView.html" data-icon="featured">Proposals</a>
-                    <a href="views/fileView.html" data-icon="organize">Files</a>
+                    <a href="views/fileView1.html" data-icon="organize">Files</a>
                     <!--<a href="views/chartsView.html">Charts</a>-->
                 </div>
             </div>
